refactor: extract reusable Spark test logic into `SparkBigDataScenario`
- Moved common Spark test setup and verification logic into an abstract `SparkBigDataScenario`.
- Simplified `SparkBigDataTestExample` by extending `SparkBigDataScenario` and overriding key properties.
- Improved modularity, reusability, and maintainability of Spark test infrastructure.